add tests to fe