@@ -7,36 +7,41 @@ import java.io.*;
 import java.net.Socket;
 import java.util.Arrays;
 import java.util.List;
-
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.when;
 
-public class AddCourseTaskTest {
+public class GetDepartmentsTaskTest {
 
     @Test
     public void testRun() throws IOException {
-        // Arrange
         Socket mockSocket = Mockito.mock(Socket.class);
         InputStream mockInputStream = new ByteArrayInputStream(serializeTestData());
         when(mockSocket.getInputStream()).thenReturn(mockInputStream);
-        AddCourseTask addCourseTask = new AddCourseTask(mockSocket);
+        LogoutTask logoutTask = new LogoutTask(mockSocket);
 
-        // Act
-        addCourseTask.run();
+        logoutTask.run();
     }
 
     @Test
     public void testSendRequest() {
-        List<String> testData = Arrays.asList("departmentId", "departmentName", "destinationName");
+        List<String> testData = List.of("");
 
-        // Set test data for AddDepartmentTask
         Database database = new Database();
 
-        assertTrue((boolean)database.sendRequest("AddDepartment", testData));
+        List<String> dbResponse = (List<String>) database.sendRequest("GetDepartments", testData);
+
+        assertEquals("1", dbResponse.get(0));
+        assertEquals("Politechnika Swietokrzyska", dbResponse.get(1));
+
+        assertEquals("2", dbResponse.get(2));
+        assertEquals("Korona", dbResponse.get(3));
+
+        assertEquals("3", dbResponse.get(4));
+        assertEquals("Echo", dbResponse.get(5));
     }
 
     private byte[] serializeTestData() throws IOException {
-        List<String> testData = Arrays.asList("CourseName", "InstructorName");
+        List<String> testData = Arrays.asList("DepartmentName", "NewDepartmentName");
         ByteArrayOutputStream bos = new ByteArrayOutputStream();
         ObjectOutputStream oos = new ObjectOutputStream(bos);
         oos.writeObject(testData);
